--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "rest api for CCA web application",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
@@ -17,7 +18,15 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.6.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "concurrently": "^8.2.1",
+    "eslint": "^8.49.0",
+    "eslint-config-standard-with-typescript": "^39.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
   }
