--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^6.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
