--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,9 @@
     "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "supertest": "^6.3.3",
     "typescript": "^5.2.2"
   }
 }
