--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,13 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.6",
     "@types/node": "^20.6.2",
+    "@types/supertest": "^2.0.15",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "concurrently": "^8.2.1",
     "eslint": "^8.49.0",
     "eslint-config-standard-with-typescript": "^39.0.0",
@@ -31,6 +35,7 @@
     "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "superagent": "^8.1.2",
     "supertest": "^6.3.3",
     "typescript": "^5.2.2"
   }
