--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -37,6 +38,7 @@
     "nodemon": "^3.0.1",
     "superagent": "^8.1.2",
     "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   }
 }
