--- a/backend/package.json
+++ b/backend/package.json
@@ -13,14 +13,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/nodemailer": "^6.4.13",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.5.3"
+    "mongoose": "^7.5.3",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.6",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.6.2",
     "@types/supertest": "^2.0.15",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
