--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         mongodb-version: ${{ matrix.mongodb-version }}
 
     - name: install dependencies
-      run: npm ci
+      run: cd backend && npm ci
     
     - name: run tests
       run: npm run test
