--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,5 +39,5 @@ jobs:
       run: cd backend && npm ci
     
     - name: run tests
-      run: npm run test
+      run: cd backend && npm run test
 
