vercel.json added, new scripts to build and route to public/

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,18 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
-    "build": "npx tsc",
-    "start": "node dist/index.js",
+    "build": "npx rimraf public && npx tsc",
+    "start": "node public/index.js",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add public",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "test": "jest --detectOpenHandles"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -21,7 +28,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
